environments/dev/ingress/teq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teq-ingress
  namespace: teq-dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: teq-shared
    # adjust health paths to match your app if needed
    # alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
spec:
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
